update to Smack 4.2-beta2. replace old MAM implementation.